# 3DGS-Image-Quality-Assessment-Tool

./: # 3DGS Quality Scout — Ubuntu-First.txt  .gitignore  3DGS_Quality_Scout_Ubuntu_Implementation_Plan_v2.md  README.md  pyproject.toml
sample_data/: README.md
splatscout/: __init__.py  cli.py  config.py  constants.py  pipeline.py  types.py
splatscout/geometry/: __init__.py
splatscout/image_quality/: __init__.py  blur.py  exposure.py  highlights.py  noise.py  reflective_sky.py
splatscout/io/: colmap_parser.py  exif.py  image_normalize.py  loaders.py  video_frames.py
splatscout/optimization/: __init__.py
splatscout/reports/: json_report.py  terminal_report.py
splatscout/scene/: __init__.py
splatscout/scoring/: __init__.py
splatscout/utils/: logging.py  paths.py
splatscout/validation/: duplicates.py  image_quality_check.py  sanity_checks.py  scene_consistency.py
tests/: test_cli.py  test_image_quality.py  test_io.py  test_reports.py  test_validation.py
tests/fixtures/colmap_text/: cameras.txt  images.txt  points3D.txt
tests/fixtures/images_basic/: img_b.ppm
tests/fixtures/images_duplicates/: dup_b.ppm  other_b.ppm
tests/fixtures/images_mixed_orientation/: land_a.ppm  land_b.ppm  port_a.ppm  port_b.ppm
tests/fixtures/invalid/: model.ply
